--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
 <body>
 
-<h1>Footballify!</h1>
+<!-- <h1>Footballify!</h1> -->
+<div class="banner">
+    <div class="banner__content">
+        <div class="banner__header"> 
+            <h1>Footballify</h1>
+        </div>
+    </div>
 
+
+
+
+
+
+</div>
 </body>
 </html>
