--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+
     </head>
 <body>
 
@@ -13,11 +15,22 @@
         </div>
     </div>
 
-
-
-
-
+    <div 
+        id="wg-api-football-fixtures"
+        data-host="api-football-v1.p.rapidapi.com"
+        data-refresh="15"
+        data-date="2022-05-06"
+        data-key="39f3c4362amsh95e00d46db6af2ep1be562jsnf98caaccf9c0"
+        data-theme=""
+        data-show-errors="false"
+        class="api_football_loader">    
+    </div>
+    <script
+        type="module"
+        src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+    </script>
 
 </div>
+
 </body>
 </html>
