--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Footballify</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="api-football.css">
         <script src="script.js"></script>
 
     </head>
@@ -21,7 +25,7 @@
         data-refresh="15"
         data-date="2022-05-06"
         data-key="39f3c4362amsh95e00d46db6af2ep1be562jsnf98caaccf9c0"
-        data-theme=""
+        data-theme="false"
         data-show-errors="false"
         class="api_football_loader">    
     </div>
