--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <body>
 
 <!-- <h1>Footballify!</h1> -->
-<div class="banner">
+<!-- <div class="banner">
     <div class="banner__content">
         <div class="banner__header"> 
             <h1>Footballify</h1>
@@ -32,9 +32,9 @@
     <script
         type="module"
         src="https://widgets.api-sports.io/football/1.1.8/widget.js">
-    </script>
+    </script> -->
 
 </div>
 
 </body>
-</html>
+</html> 
