--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
+                crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Footballify</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="api-football.css">
         <script src="script.js"></script>
-
     </head>
 <body>
 
 <!-- <h1>Footballify!</h1> -->
-<!-- <div class="banner">
+<div class="banner">
     <div class="banner__content">
         <div class="banner__header"> 
             <h1>Footballify</h1>
@@ -32,9 +33,9 @@
     <script
         type="module"
         src="https://widgets.api-sports.io/football/1.1.8/widget.js">
-    </script> -->
+    </script>
 
 </div>
 
 </body>
-</html> 
+</html>
