--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         data-host="api-football-v1.p.rapidapi.com"
         data-refresh="15"
         data-date="2022-05-06"
-        data-key=""
+        data-key="token"
         data-theme="false"
         data-show-errors="false"
         class="api_football_loader">    
