--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <title>Footballify</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="api-football.css">
-        <script src="script.js"></script>
-        <script type='text/javascript' src='config.js'></script>
 
     </head>
 <body>
@@ -27,7 +25,7 @@
         data-host="api-football-v1.p.rapidapi.com"
         data-refresh="15"
         data-date="2022-05-06"
-        data-key = ""
+        data-key = "NOT_LOADED_YET"
         data-theme="false"
         data-show-errors="false"
         class="api_football_loader">    
@@ -39,5 +37,7 @@
 
 </div>
 
+<script type="text/javascript" src="config.js"></script>
+<script type="text/javascript" src="script.js"></script> 
 </body>
 </html>
