--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         data-host="api-football-v1.p.rapidapi.com"
         data-refresh="15"
         data-date="2022-05-06"
-        data-key = "NOT_LOADED_YET"
+        data-key = "e54f3d3972ca8251c1259694b49948de"
         data-theme="false"
         data-show-errors="false"
         class="api_football_loader">    
