--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div 
         id="wg-api-football-fixtures"
-        data-host="api-football-v1.p.rapidapi.com"
+        data-host="v3.football.api-sports.io"
         data-refresh="15"
         data-date="2022-05-06"
         data-key = "e54f3d3972ca8251c1259694b49948de"
