--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         data-date="2022-05-06"
         data-key = "e54f3d3972ca8251c1259694b49948de"
         data-theme="false"
+        data-league="39, 40"
         data-show-errors="false"
         class="api_football_loader">    
     </div>
