--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="banner__content">
         <div class="banner__header"> 
             <h1>Footballify</h1>
+            <button><a href="/">"Football Scores"</a></button>
         </div>
     </div>
 </div>
