--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="banner">
     <div class="banner__content">
         <div class="banner__header"> 
-            <h1>Footballify</h1> <button><a href="/">"Football Scores"</a></button>
+            <h1>Footballify</h1> <h1><a href="/">Football Scores</a></h1>
         </div>
     </div>
 </div>
