--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
                 crossorigin="anonymous"></script>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Footballify</title>
-        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="api-football.css">
-
+        <title>Footballify</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     </head>
+
 <body>
-
-<!-- <h1>Footballify!</h1> -->
-<div class="banner">
-    <div class="banner__content">
-        <div class="banner__header"> 
-            <h1>Footballify</h1> <h1><a href="/">Football Scores</a></h1>
-        </div>
-    </div>
-</div>
-
+  <nav>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+      <i class="fas fa-bars"></i>
+    </label>
+    <label class="logo">Footballify</label>
+    <ul>
+      <li><a class="active" href="#">Football Scores</a></li>
+      <li><a href="#">Standings</a></li>
+      <li><a href="#">Live Streams</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <section></section>
 <div 
         id="wg-api-football-fixtures"
         data-host="v3.football.api-sports.io"
