--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
         <title>Footballify</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    </head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
 
 <body>
   <nav>
-    <input type="checkbox" id="check">
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
+    <div class="logo">
+       Brand
+    </div>
+    <input type="checkbox" id="click">
+    <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
     </label>
-    <label class="logo">Footballify</label>
     <ul>
-      <li><a class="active" href="#">Football Scores</a></li>
-      <li><a href="#">Standings</a></li>
-      <li><a href="#">Live Streams</a></li>
-      <li><a href="#">Contact</a></li>
+       <li><a class="active" href="#">Home</a></li>
+       <li><a href="#">About</a></li>
+       <li><a href="#">Services</a></li>
+       <li><a href="#">Gallery</a></li>
+       <li><a href="#">Feedback</a></li>
     </ul>
-  </nav>
-  <section></section>
+ </nav>
+ </div>
+
 <div 
         id="wg-api-football-fixtures"
         data-host="v3.football.api-sports.io"
