--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
   <nav>
     <div class="logo">
-       Brand
+       Footballify
     </div>
     <input type="checkbox" id="click">
     <label for="click" class="menu-btn">
     <i class="fas fa-bars"></i>
     </label>
     <ul>
-       <li><a class="active" href="#">Home</a></li>
-       <li><a href="#">About</a></li>
-       <li><a href="#">Services</a></li>
-       <li><a href="#">Gallery</a></li>
-       <li><a href="#">Feedback</a></li>
+       <li><a class="active" href="#">Football Scores</a></li>
+       <li><a href="#">Standings</a></li>
+       <li><a href="#">Stats</a></li>
+       <li><a href="#">Live Streams</a></li>
+       <li><a href="#">Contact</a></li>
     </ul>
  </nav>
  </div>
