--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         id="wg-api-football-fixtures"
         data-host="v3.football.api-sports.io"
         data-refresh="15"
-        data-league="41"
+        data-league="fixture_41"
         data-key = "e54f3d3972ca8251c1259694b49948de"
         data-theme="false"
         data-show-errors="false"
