--- a/standings/index.html
+++ b/standings/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+    <nav>
+        <div class="logo">
+           Footballify
+        </div>
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+        <i class="fas fa-bars"></i>
+        </label>
+        <ul>
+           <li><a href="">Football Scores</a></li>
+           <li><a  class="active" href="standings/">Standings</a></li>
+           <li><a href="#">Stats</a></li>
+           <li><a href="#">Live Streams</a></li>
+           <li><a href="#">Contact</a></li>
+        </ul>
+     </nav>
+     </div>
 </body>
 </html>
