--- a/standings/index.html
+++ b/standings/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
+                crossorigin="anonymous"></script>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="api-football.css">
+        <title>Footballify</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
 <body>
     <nav>
         <div class="logo">
