--- a/standings/index.html
+++ b/standings/index.html
@@ -18,8 +18,8 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a href="">Football Scores</a></li>
-           <li><a  class="active" href="standings/">Standings</a></li>
+           <li><a href="footballify.net">Football Scores</a></li>
+           <li><a  class="active" href="footballify.net/standings/">Standings</a></li>
            <li><a href="#">Stats</a></li>
            <li><a href="#">Live Streams</a></li>
            <li><a href="#">Contact</a></li>
