--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <i class="fas fa-bars"></i>
     </label>
     <ul>
-       <li><a class="active" href="">Football Scores</a></li>
-       <li><a href="standings/">Standings</a></li>
+       <li><a class="active" href="footballify.net">Football Scores</a></li>
+       <li><a href="footballify.net/standings/">Standings</a></li>
        <li><a href="#">Stats</a></li>
        <li><a href="#">Live Streams</a></li>
        <li><a href="#">Contact</a></li>
