--- a/standings/index.html
+++ b/standings/index.html
@@ -26,5 +26,18 @@
         </ul>
      </nav>
      </div>
+     <div id="wg-api-football-standings"
+     data-host="v3.football.api-sports.io"
+     data-league="39"
+     data-team=""
+     data-season="2020"
+     data-key="e54f3d3972ca8251c1259694b49948de"
+     data-theme=""
+     data-show-errors="false"
+     class="api_football_loader"></div>
+<script
+    type="module"
+    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+</script>
 </body>
 </html>
