--- a/index.html
+++ b/index.html
@@ -22,17 +22,9 @@
     </label>
     <ul>
        <li><a class="active" href="http://footballify.net">Football Scores</a></li>
-       <li><a>Standings</a></li>
-                <ul>
-                        <li><a>Premier League</a></li>
-                        <li><a>La Liga</a></li>
-                        <li><a>Serie A TIM</a></li>
-                        <li><a>Bundesliga</a></li>
-                        <li><a>Ligue 1</a></li>
-                        <li><a>Champions League</a></li>
-                </ul>
+       <li><a href="#">Standings</a></li>
        <li><a href="#">Stats</a></li>
-       <li><a href="#">Live Streams</a></li>
+       <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
        <li><a href="#">Contact</a></li>
     </ul>
  </nav>
