--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
 <body>
+    <div>
     <nav>
         <div class="logo">
            Footballify
@@ -21,23 +22,21 @@
            <li><a href="http://footballify.net">Football Scores</a></li>
            <li><a href="http://footballify.net">Standings</a></li>
            <li><a href="#">Stats</a></li>
-           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+           <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
            <li><a href="#">Contact</a></li>
         </ul>
      </nav>
-     </div>
-     <div id="wg-api-football-standings"
-     data-host="v3.football.api-sports.io"
-     data-league="39"
-     data-team=""
-     data-season="2021"
-     data-key="e54f3d3972ca8251c1259694b49948de"
-     data-theme=""
-     data-show-errors="false"
-     class="api_football_loader"></div>
-<script
-    type="module"
-    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
-</script>
-</body>
-</html>
+</div>
+
+<div class="streamlist">
+    <li><a href="http://footballify.net/livestream/1"></a>Game 1</li>
+    <li><a href="http://footballify.net/livestream/2"></a>Game 2</li>
+    <li><a href="http://footballify.net/livestream/3"></a>Game 3</li>
+    <li><a href="http://footballify.net/livestream/4"></a>Game 4</li>
+    <li><a href="http://footballify.net/livestream/5"></a>Game 5</li>
+    <li><a href="http://footballify.net/livestream/6"></a>Game 6</li>
+    <li><a href="http://footballify.net/livestream/7"></a>Game 7</li>
+    <li><a href="http://footballify.net/livestream/8"></a>Game 8</li>
+    <li><a href="http://footballify.net/livestream/9"></a>Game 9</li>
+    <li><a href="http://footballify.net/livestream/10"></a>Game 10</li>
+</div>
