--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -28,15 +28,16 @@
      </nav>
 </div>
 
-<div class="streamlist">
-    <h1><a href="http://footballify.net/livestream/1"></a>Tottenham Hotspur VS Arsenal FC Game Links</li>
-    <h1><a href="http://footballify.net/livestream/2"></a>Game 2</h1>
-    <h1><a href="http://footballify.net/livestream/3"></a>Game 3</h1>
-    <h1><a href="http://footballify.net/livestream/4"></a>Game 4</h1>
-    <h1><a href="http://footballify.net/livestream/5"></a>Game 5</h1>
-    <h1><a href="http://footballify.net/livestream/6"></a>Game 6</h1>
-    <h1><a href="http://footballify.net/livestream/7"></a>Game 7</h1>
-    <h1><a href="http://footballify.net/livestream/8"></a>Game 8</h1>
-    <h1><a href="http://footballify.net/livestream/9"></a>Game 9</h1>
-    <h1><a href="http://footballify.net/livestream/10"></a>Game 10</h1>
+<div class="adflylinks">
+    <h1>Tottenham Hotspur VS Arsenal FC</h1>
+    <h2><a href="#"></a>Link 1</h2>
+    <h2><a href="#"></a>Link 2</h2>
+    <h2><a href="#"></a>Link 3</h2>
+    <h2><a href="#"></a>Link 4</h2>
+    <h2><a href="#"></a>Link 5</h2>
+    <h2><a href="#"></a>Link 6</h2>
+    <h2><a href="#"></a>Link 7</h2>
+    <h2><a href="#"></a>Link 8</h2>
+    <h2><a href="#"></a>Link 9</h2>
+    <h2><a href="#"></a>Link 10</h2>
 </div>
