--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -29,14 +29,14 @@
 </div>
 
 <div class="streamlist">
-    <h1><a href="http://footballify.net/livestream/1"></a>Tottenham Hotspur VS Arsenal FC Game Links</li>
-    <h1><a href="http://footballify.net/livestream/2"></a>Game 2</h1>
-    <h1><a href="http://footballify.net/livestream/3"></a>Game 3</h1>
-    <h1><a href="http://footballify.net/livestream/4"></a>Game 4</h1>
-    <h1><a href="http://footballify.net/livestream/5"></a>Game 5</h1>
-    <h1><a href="http://footballify.net/livestream/6"></a>Game 6</h1>
-    <h1><a href="http://footballify.net/livestream/7"></a>Game 7</h1>
-    <h1><a href="http://footballify.net/livestream/8"></a>Game 8</h1>
-    <h1><a href="http://footballify.net/livestream/9"></a>Game 9</h1>
-    <h1><a href="http://footballify.net/livestream/10"></a>Game 10</h1>
+    <h1><a href="http://footballify.net/livestream/1">Tottenham Hotspur VS Arsenal FC Game Links</a></hi>
+    <h1><a href="http://footballify.net/livestream/2">Game 2</a></h1>
+    <h1><a href="http://footballify.net/livestream/3">Game 3</a></h1>
+    <h1><a href="http://footballify.net/livestream/4">Game 4</a></h1>
+    <h1><a href="http://footballify.net/livestream/5">Game 5</a></h1>
+    <h1><a href="http://footballify.net/livestream/6">Game 6</a></h1>
+    <h1><a href="http://footballify.net/livestream/7">Game 7</a></h1>
+    <h1><a href="http://footballify.net/livestream/8">Game 8</a></h1>
+    <h1><a href="http://footballify.net/livestream/9">Game 9</a></h1>
+    <h1><a href="http://footballify.net/livestream/10">Game 10</a></h1>
 </div>
