--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav>
-    <div class="logo">
+    <div class="logo" href="http://footballify.net">
        Footballify
     </div>
     <input type="checkbox" id="click">
