--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
     <nav>
-        <div class="logo">
+        <div class="logo"  href="http://footballify.net">
            Footballify
         </div>
         <input type="checkbox" id="click">
