--- a/livestreams/5/index.html
+++ b/livestreams/5/index.html
@@ -30,7 +30,7 @@
 
 <div class="adflylinks">
     <h3>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a>Contact Us</a></h3>
-    <h1>Tottenham Hotspur VS Arsenal FC</h1>
+    <h1>Game Name</h1>
     <h2><a href="#"></a>Link 1</h2>
     <h2><a href="#"></a>Link 2</h2>
     <h2><a href="#"></a>Link 3</h2>
