--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -29,6 +29,7 @@
 </div>
 
 <div class="streamlist">
+    <h3>Choose a Game to Watch</h3>
     <h1><a href="http://footballify.net/livestream/1">Tottenham Hotspur VS Arsenal FC Game Links</a></hi>
     <h1><a href="http://footballify.net/livestream/2">Game 2</a></h1>
     <h1><a href="http://footballify.net/livestream/3">Game 3</a></h1>
