--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <nav>
-    <div class="logo" href="http://footballify.net">
-       Footballify
-    </div>
+        <div class="logo">
+                <a href="http://footballify.net">Footballify</a>
+        </div>
     <input type="checkbox" id="click">
     <label for="click" class="menu-btn">
     <i class="fas fa-bars"></i>
