--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -11,8 +11,8 @@
 <body>
     <div>
     <nav>
-        <div class="logo"  href="http://footballify.net">
-           Footballify
+        <div class="logo">
+           <a href="http://footballify.net">Footballify</a>
         </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
@@ -29,7 +29,7 @@
 </div>
 
 <div class="streamlist">
-    <h3>Choose a Game to Watch</h3>
+    <h3><strong>Choose a Game to Watch</strong></h3>
     <h1><a href="http://footballify.net/livestream/1">Tottenham Hotspur VS Arsenal FC Game Links</a></hi>
     <h1><a href="http://footballify.net/livestream/2">Game 2</a></h1>
     <h1><a href="http://footballify.net/livestream/3">Game 3</a></h1>
