--- a/standings/index.html
+++ b/standings/index.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
 <body>
     <nav>
-        <div class="logo"  href="http://footballify.net">
-           Footballify
-        </div>
+        <div class="logo">
+            <a href="http://footballify.net">Footballify</a>
+         </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
