--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
         <div class="logo">
-                <a href="http://footballify.net">Footballify</a>
+                <a class= "webname" href="http://footballify.net">Footballify</a>
         </div>
     <input type="checkbox" id="click">
     <label for="click" class="menu-btn">
