--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -29,9 +29,9 @@
 </div>
 
 <div class="adflylinks">
-    <h3>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a>Contact Us</a></h3>
+    <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h1>Tottenham Hotspur VS Arsenal FC</h1>
-    <h2><a href="#"></a>Link 1</h2>
+    <h2><a href="http://footballify.net"></a>Link 1</h2>
     <h2><a href="#"></a>Link 2</h2>
     <h2><a href="#"></a>Link 3</h2>
     <h2><a href="#"></a>Link 4</h2>
