--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -31,14 +31,14 @@
 <div class="adflylinks">
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h1>Tottenham Hotspur VS Arsenal FC</h1>
-    <h2><a href="http://footballify.net"></a>Link 1</h2>
-    <h2><a href="#"></a>Link 2</h2>
-    <h2><a href="#"></a>Link 3</h2>
-    <h2><a href="#"></a>Link 4</h2>
-    <h2><a href="#"></a>Link 5</h2>
-    <h2><a href="#"></a>Link 6</h2>
-    <h2><a href="#"></a>Link 7</h2>
-    <h2><a href="#"></a>Link 8</h2>
-    <h2><a href="#"></a>Link 9</h2>
-    <h2><a href="#"></a>Link 10</h2>
+    <h2 class="gamelinks"><a href="http://footballify.net"></a>Link 1</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 2</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 3</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 4</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 5</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 6</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 7</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 8</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 9</h2>
+    <h2 class="gamelinks"><a href="#"></a>Link 10</h2>
 </div>
