--- a/livestreams/8/index.html
+++ b/livestreams/8/index.html
@@ -11,9 +11,9 @@
 <body>
     <div>
     <nav>
-        <div class="logo"  href="http://footballify.net">
-           Footballify
-        </div>
+        <div class="logo">
+            <a class= "webname" href="http://footballify.net">Footballify</a>
+    </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
