--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -12,8 +12,8 @@
     <div>
     <nav>
         <div class="logo">
-           <a href="http://footballify.net">Footballify</a>
-        </div>
+            <a class= "webname" href="http://footballify.net">Footballify</a>
+    </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -30,14 +30,14 @@
 
 <div class="streamlist">
     <h3><strong>Choose a Game to Watch</strong></h3>
-    <h1><a href="http://footballify.net/livestreams/1">Tottenham Hotspur VS Arsenal FC Game Links</a></hi>
-    <h1><a href="http://footballify.net/livestreams/2">Game 2</a></h1>
-    <h1><a href="http://footballify.net/livestreams/3">Game 3</a></h1>
-    <h1><a href="http://footballify.net/livestreams/4">Game 4</a></h1>
-    <h1><a href="http://footballify.net/livestreams/5">Game 5</a></h1>
-    <h1><a href="http://footballify.net/livestreams/6">Game 6</a></h1>
-    <h1><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
-    <h1><a href="http://footballify.net/livestreams/8">Game 8</a></h1>
-    <h1><a href="http://footballify.net/livestreams/9">Game 9</a></h1>
-    <h1><a href="http://footballify.net/livestreams/10">Game 10</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Tottenham Hotspur VS Arsenal FC Game Links</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">Game 2</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Game 3</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Game 4</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Game 5</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/6">Game 6</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/8">Game 8</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/9">Game 9</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/10">Game 10</a></h1>
 </div>
