--- a/contact/index.html
+++ b/contact/index.html
@@ -22,23 +22,13 @@
            <li><a href="http://footballify.net">Football Scores</a></li>
            <li><a href="http://footballify.net">Standings</a></li>
            <li><a href="#">Stats</a></li>
-           <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="http://footballify.net/contact">Contact</a></li>
+           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+           <li><a class="active" href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
 
-<div class="adflylinks">
-    <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
-    <h1>Tottenham Hotspur VS Arsenal FC</h1>
-    <h2 class="gamelinks"><a href="http://footballify.net"></a>Link 1</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 2</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 3</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 4</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 5</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 6</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 7</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 8</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 9</h2>
-    <h2 class="gamelinks"><a href="#"></a>Link 10</h2>
+<div>
+    <h1>Contact US</h1>
+    <h4>If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
 </div>
