--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
     <head>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
+     crossorigin="anonymous"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
                 crossorigin="anonymous"></script>
         <meta charset="utf-8">
@@ -25,7 +27,7 @@
        <li><a href="#">Standings</a></li>
        <li><a href="#">Stats</a></li>
        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-       <li><a href="#">Contact</a></li>
+       <li><a href="http://footballify.net/contact">Contact</a></li>
     </ul>
  </nav>
  </div>
