--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
      </nav>
 </div>
 
-<div>
-    <h1>Contact US</h1>
-    <h4>If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
+<div class="contactpage">
+    <h1 class="contacttext"><strong>Contact US</strong></h1>
+    <h4 class="contacttext">If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
 </div>
