--- a/livestreams/9/index.html
+++ b/livestreams/9/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
+    <head>      
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
                 crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <link rel="stylesheet" href="api-football.css">
@@ -8,6 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
+    </head>
 <body>
     <div>
     <nav>
@@ -30,6 +40,7 @@
 
 <div class="adflylinks">
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
+    <h3><strong>Tip: Click on any link, wait for AD to finish and then continue to your match. If a link does not work for you, try another link<a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h1>Game Name</h1>
     <h2><a href="#"></a>Link 1</h2>
     <h2><a href="#"></a>Link 2</h2>
