--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -48,15 +48,15 @@
 </div>
 
 <div class="streamlist">
-    <h3><strong>Choose a Game to Watch</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Tottenham Hotspur VS Arsenal FC Game Links</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2">Game 2</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">Game 3</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Game 4</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/5">Game 5</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/6">Game 6</a></h1>
+    <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Leeds United VS Arsenal FC Game Links</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">Leicester City VS Everton Game Links</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Norwich City VS West Ham Game Links</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Manchester City VS Newcastle United Game Links</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Atletico Madrid VS Real Madrid Game Links</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/6">Game 6</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Game 8</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Game 9</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/10">Game 10</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/10">Game 10</a></h1> -->
 </div>
