--- a/standings/index.html
+++ b/standings/index.html
@@ -44,6 +44,20 @@
            <li><a href="#">Contact</a></li>
         </ul>
      </nav>
+     <nav>
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+        <i class="fas fa-bars"></i>
+        </label>
+        <ul>
+           <li><a href="http://footballify.net">Premier League</a></li>
+           <li><a href="http://footballify.net">La Liga</a></li>
+           <li><a href="#">Bundesliga</a></li>
+           <li><a href="http://footballify.net/livestreams">Serie A TIM</a></li>
+           <li><a href="#">Ligue 1</a></li>
+           <li><a href="#">Champions League</a></li>
+        </ul>
+     </nav>
      </div>
      <div id="wg-api-football-standings"
      data-host="v3.football.api-sports.io"
