--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </label>
     <ul>
        <li><a class="active" href="http://footballify.net">Football Scores</a></li>
-       <li><a href="#">Standings</a></li>
+       <li><a href="http://footballify.net/standings">Standings</a></li>
        <li><a href="#">Stats</a></li>
        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
        <li><a href="http://footballify.net/contact">Contact</a></li>
