--- a/standings/index.html
+++ b/standings/index.html
@@ -30,7 +30,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="http://footballify.net">Footballify</a>
+            <a class= "webname" href="http://footballify.net">Footballify</a>
          </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
@@ -38,10 +38,10 @@
         </label>
         <ul>
            <li><a href="http://footballify.net">Football Scores</a></li>
-           <li><a href="http://footballify.net">Standings</a></li>
+           <li><a href="http://footballify.net/standings">Standings</a></li>
            <li><a href="#">Stats</a></li>
            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="#">Contact</a></li>
+           <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
      <nav>
@@ -50,7 +50,7 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a href="http://footballify.net">Premier League</a></li>
+           <li><a class ="active" href="http://footballify.net/standings">Premier League</a></li>
            <li><a href="http://footballify.net">La Liga</a></li>
            <li><a href="#">Bundesliga</a></li>
            <li><a href="http://footballify.net/livestreams">Serie A TIM</a></li>
