--- a/standings/index.html
+++ b/standings/index.html
@@ -50,12 +50,13 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a class ="active" href="http://footballify.net/standings">Premier League</a></li>
-           <li><a href="http://footballify.net">La Liga</a></li>
-           <li><a href="#">Bundesliga</a></li>
-           <li><a href="http://footballify.net/livestreams">Serie A TIM</a></li>
-           <li><a href="#">Ligue 1</a></li>
-           <li><a href="#">Champions League</a></li>
+           <li><a class ="active">Premier League</a></li>
+           <li><a>La Liga</a></li>
+           <li><a>Bundesliga</a></li>
+           <li><a>Serie A TIM</a></li>
+           <li><a>Ligue 1</a></li>
+           <li><a>Europa League</a></li>
+           <li><a>Champions League</a></li>
         </ul>
      </nav>
      </div>
