--- a/standings/index.html
+++ b/standings/index.html
@@ -46,15 +46,13 @@
      </nav>
      <nav>
         <input type="checkbox" id="click">
-        <label for="click" class="menu-btn">
-        <i class="fas fa-bars"></i>
-        </label>
         <ul>
            <li><a class ="active">Premier League</a></li>
            <li><a>La Liga</a></li>
            <li><a>Bundesliga</a></li>
            <li><a>Serie A TIM</a></li>
            <li><a>Ligue 1</a></li>
+           <li><a>Europa League</a></li>
            <li><a>Champions League</a></li>
         </ul>
      </nav>
