--- a/standings/index.html
+++ b/standings/index.html
@@ -44,7 +44,7 @@
            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
-     <nav>
+     <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
            <li><a class ="active">Premier League</a></li>
