--- a/standings/index.html
+++ b/standings/index.html
@@ -52,8 +52,7 @@
            <li><a>Bundesliga</a></li>
            <li><a>Serie A TIM</a></li>
            <li><a>Ligue 1</a></li>
-           <li><a>Europa League</a></li>
-           <li><a>Champions League</a></li>
+           <li><a>UEFA Champions League</a></li>
         </ul>
      </nav>
      </div>
