--- a/standings/index.html
+++ b/standings/index.html
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    </head>
     </head>
 <body>
-    <nav class="standingsnav">
+    <nav class="standings">
         <div class="logo">
             <a class= "webname" href="http://footballify.net">Footballify</a>
          </div>
