--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -49,7 +49,7 @@
 
 <div class="adflylinks">
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
-    <h3><strong>Tip: Click on any link, wait for AD to finish and then continue to your match. If a link does not work for you, try another link</h3>
+    <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
 
     <h1>Arsenal FC VS Leeds United</h1>
     <h2 class="gamelinks"><a href="http://footballify.net"></a>Link 1</h2>
