--- a/livestreams/3/index.html
+++ b/livestreams/3/index.html
@@ -51,14 +51,14 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Norwich City VS West Ham</h1>
-    <h2><a href="#">Link 1</a></h2>
-    <h2><a href="#">Link 2</a></h2>
-    <h2><a href="#">Link 3</a></h2>
-    <h2><a href="#">Link 4</a></h2>
-    <h2><a href="#">Link 5</a></h2>
-    <h2><a href="#">Link 6</a></h2>
-    <h2><a href="#">Link 7</a></h2>
-    <h2><a href="#">Link 8</a></h2>
-    <h2><a href="#">Link 9</a></h2>
-    <h2><a href="#">Link 10</a></h2>
+    <h2><a href="https://mazystreams.xyz/event/2022/ich-city-vs-west-ham-unite/s4.php">Link 1</a></h2>
+    <h2><a href="http://bongstreams.com/events/soccer/norwich-city-vs-west-ham/">Link 2</a></h2>
+    <h2><a href="http://www.weekend-sports.com/sports/norwich-city-vs-west-ham-united/">Link 3</a></h2>
+    <h2><a href="http://www.ovostreams.com/events/2022/norwich-city-vs-west-ham-s3/">Link 4</a></h2>
+    <h2><a href="https://sportnews.to/total/sports/2022/premier-league-norwich-city-vs-west-ham-united-s3/">Link 5</a></h2>
+    <h2><a href="http://dubznetwork.com/game/soccer2/norwich-city-vs-west-ham-united-8may/">Link 6</a></h2>
+    <h2><a href="http://motornews.live/novo/total/08-per-Norwich/">Link 7</a></h2>
+    <h2><a href="https://gamerarcades.com/view/may8/s6/">Link 8</a></h2>
+    <h2><a href="http://enjoy4k.xyz/8k/hd10.php">Link 9</a></h2>
+    <h2><a href="http://enjoy4k.xyz/8k/hd10.php">Link 10</a></h2>
 </div>
