--- a/livestreams/2/index.html
+++ b/livestreams/2/index.html
@@ -52,13 +52,13 @@
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Leicester City VS Everton</h1>
     <h2><a href="https://techstribes.com/2fmay9/">Link 1</a></h2>
-    <h2><a href="http://bongstreams.com/events/soccer/leicester-city-vs-everton/">Link 2</a></h2>
-    <h2><a href="http://www.ovostreams.com/events/2022/leicester-vs-everton-s2/">Link 3</a></h2>
-    <h2><a href="https://sportnews.to/total/sports/2022/premier-league-leicester-city-vs-everton-s2/">Link 4</a></h2>
-    <h2><a href="http://motornews.live/novo/total/08-per-Leicester/">Link 5</a></h2>
-    <h2><a href="https://mazystreams.xyz/event/2022/ster-city-vs-everto/s5.php">Link 6</a></h2>
-    <h2><a href="http://hockeyweb.live/daily/totalsports/leicester08/">Link 7</a></h2>
-    <h2><a href="https://gamerarcades.com/view/may8/s5/">Link 8</a></h2>
-    <h2><a href="https://gamerarcades.com/view/may8/s5/">Link 9</a></h2>
-    <h2><a href="https://gamerarcades.com/view/may8/s5/">Link 10</a></h2>
+    <h2><a href="http://bongstreams.com/events/soccer/leicester-city-vs-everton/" target="_blank">Link 2</a></h2>
+    <h2><a href="http://www.ovostreams.com/events/2022/leicester-vs-everton-s2/" target="_blank">Link 3</a></h2>
+    <h2><a href="https://sportnews.to/total/sports/2022/premier-league-leicester-city-vs-everton-s2/" target="_blank">Link 4</a></h2>
+    <h2><a href="http://motornews.live/novo/total/08-per-Leicester/" target="_blank">Link 5</a></h2>
+    <h2><a href="https://mazystreams.xyz/event/2022/ster-city-vs-everto/s5.php" target="_blank">Link 6</a></h2>
+    <h2><a href="http://hockeyweb.live/daily/totalsports/leicester08/" target="_blank">Link 7</a></h2>
+    <h2><a href="https://gamerarcades.com/view/may8/s5/" target="_blank">Link 8</a></h2>
+    <h2><a href="https://gamerarcades.com/view/may8/s5/" target="_blank">Link 9</a></h2>
+    <h2><a href="https://gamerarcades.com/view/may8/s5/" target="_blank">Link 10</a></h2>
 </div>
