--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -49,9 +49,9 @@
 
 <div class="streamlist">
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Leeds United VS Arsenal FC Game Links</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2">Leicester City VS Everton Game Links</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">Norwich City VS West Ham Game Links</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Leeds United VS Arsenal FC Game Links (Finished)</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Leicester City VS Everton Game Links (Finished)</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Norwich City VS West Ham Game Links (Finished)</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/4">Manchester City VS Newcastle United Game Links</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/5">Atletico Madrid VS Real Madrid Game Links</a></h1>
     <!-- <h1 class="games"><a href="http://footballify.net/livestreams/6">Game 6</a></h1>
