--- a/livestreams/4/index.html
+++ b/livestreams/4/index.html
@@ -60,5 +60,5 @@
     <h2><a class="gamelinks" href="https://hockeynews.club/chester-city-vs-newcastle-uni/" target="_blank">Link 7</a></h2>
     <h2><a class="gamelinks" href="http://hockeyweb.live/daily/totalsports/mancity08/" target="_blank">Link 8</a></h2>
     <h2><a class="gamelinks" href="https://gamerarcades.com/view/may8/s2/" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="http://hytlive.com/info.html?s=azA4c3NzY2NvbnRlbnQyMDIyMDUwODYwNTY4Mw==" target="_blank">Link 10</a></h2>
+    <h2><a class="gamelinks" href="https://www.stplyr.com/p/03.html" target="_blank">Link 10</a></h2>
 </div>
