--- a/livestreams/4/index.html
+++ b/livestreams/4/index.html
@@ -50,7 +50,7 @@
 <div class="adflylinks">
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
-    <h1>Manchester City VS Newcastle United</h1>
+    <h1>Manchester City VS Newcastle United (Finished)</h1>
     <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/chester-city-vs-newcastle-uni/s1.php" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="http://bongstreams.com/events/soccer/manchester-city-vs-newcastle-united/" target="_blank">Link 2</a></h2>
     <h2><a class="gamelinks" href="http://olympicology.com/sports/manchester-city-vs-newcastle-united/" target="_blank">Link 3</a></h2>
