--- a/livestreams/5/index.html
+++ b/livestreams/5/index.html
@@ -51,14 +51,14 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Atletico Madrid VS Real Madrid</h1>
-    <h2><a href="#">Link 1</a></h2>
-    <h2><a href="#">Link 2</a></h2>
-    <h2><a href="#">Link 3</a></h2>
-    <h2><a href="#">Link 4</a></h2>
-    <h2><a href="#">Link 5</a></h2>
-    <h2><a href="#">Link 6</a></h2>
-    <h2><a href="#">Link 7</a></h2>
-    <h2><a href="#">Link 8</a></h2>
-    <h2><a href="#">Link 9</a></h2>
-    <h2><a href="#">Link 10</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
 </div>
