--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -52,10 +52,10 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/">Leeds United VS Arsenal FC Game Links (Finished)</a></hi>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Leicester City VS Everton Game Links (Finished)</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Norwich City VS West Ham Game Links (Finished)</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Manchester City VS Newcastle United Game Links</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Manchester City VS Newcastle United Game Links</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/5">Atletico Madrid VS Real Madrid Game Links</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/6">Game 6</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/6">Paris Saint-Germain VS Troyes</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Game 8</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Game 9</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Game 10</a></h1> -->
