--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -54,7 +54,7 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/">Norwich City VS West Ham Game Links (Finished)</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/">Manchester City VS Newcastle United Game Links (Finished)</a></h1>
     <h1 class = "live" class="games"><a href="http://footballify.net/livestreams/5">Atletico Madrid VS Real Madrid Game Links (LIVE)</a></h1>
-    <h1 class = "live" class="games"><a href="http://footballify.net/livestreams/6">Paris Saint-Germain VS Troyes (LIVE)</a></h1>
+    <h1 class = "live" class="games"><a href="http://footballify.net/livestreams/6">Paris Saint-Germain VS Troyes Game Links (LIVE)</a></h1>
     <!-- <h1 class="games"><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Game 8</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Game 9</a></h1>
